--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "symfony/symfony": ">= 2.2.0",
         "twig/twig": ">= 1.9.0",
-        "twig/extensions": "1.0.*"
+        "twig/extensions": "~1.0"
     },
     "suggest": {
         "cedriclombardot/admingenerator-generator-bundle": "The missing symfony2 admin generator"
