--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "symfony/symfony": ">= 2.2.0",
-        "twig/twig": "~1.12",
+        "twig/twig": "~1.26||~2.0",
         "twig/extensions": "~1.0"
     },
     "suggest": {
