Added symfony 4 support

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         }
     ],
     "require": {
-        "symfony/symfony": ">= 2.2.0",
+        "symfony/config": "~2.2|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.2|~3.0|~4.0",
+        "symfony/form": "~2.2|~3.0|~4.0",
+        "symfony/http-kernel": "~2.2|~3.0|~4.0",
         "twig/twig": "~1.26||~2.0",
         "twig/extensions": "~1.0"
     },
