--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         }
     ],
     "require": {
-        "symfony/config": "~2.3|~3.0|~4.0|~5.0",
-        "symfony/dependency-injection": "~2.3|~3.0|~4.0|~5.0",
-        "symfony/form": "~2.3|~3.0|~4.0|~5.0",
-        "symfony/http-kernel": "~2.3|~3.0|~4.0|~5.0",
-        "twig/twig": "~1.40|~2.9|~3.0"
+        "php": ">=8.1.0",
+        "symfony/config": "~4.4|~5.4|~6.2",
+        "symfony/dependency-injection": "~4.4|~5.4|~6.2",
+        "symfony/form": "~4.4|~5.4|~6.2",
+        "symfony/http-kernel": "~4.4|~5.4|~6.2",
+        "twig/twig": "^2.15.3||^3.4.3"
     },
     "suggest": {
         "symfony2admingenerator/generator-bundle": "The missing symfony2 admin generator",
@@ -32,7 +33,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.8-dev"
+            "dev-master": "2.0-dev"
         }
     }
 }
